style.css
html {
  scroll-behavior: smooth;
}

body {
  font-family: 'Roboto', sans-serif;
  margin: 0;
  color: #222831;
}

#header {
  overflow: hidden;
  background-color: #0d1624;
  position: fixed;
  top: 0;
  width: 100%;
  height: 80px;
  z-index: 2;
  box-shadow: 0 5px 6px -6px #222;
  transition: all 0.2s ease;
}

.top-menu {
  list-style: none;
  margin: auto;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.top-menu a {
  text-decoration: none;
  margin: 0px 10px;
  padding: 15px 20px;
  font-size:  20px;
  color: white;
}

.top-menu a:hover {
  background-color: #e8e8e8;
  color: black;
}

main {
  padding-top: 80px;
}

#sidebar-info {
  background-color: #e8e8e8;
  position: fixed;
  left: 0;
  height: 100%;
  width: 250px;
  display: block;
  text-align: center;
  box-shadow: 1px 0px 5px 0px #222;
  -webkit-box-shadow: 1px 0px 5px 0px #222;
  -moz-box-shadow: 1px 0px 5px 0px #222;
  color: #222831;
  padding-top: 70px;
}

#sidebar-info img{
  width: 180px;
  height: auto;
  border-radius: 50%;
  border: solid white 4px;
  margin-bottom: 20px;
}

#info a {
  text-decoration: none;
  color: #222831;
}

#info a:hover {
  text-decoration: underline;
}

#social-links .fa-linkedin-square {
  color: #007bb5;
}

#social-links .fa-linkedin-square:hover {
  color: #01acff;
}

#social-links .fa-github {
  color: #211f1f;
}

#social-links .fa-github:hover {
  color: #615b5b;
}

#social-links .fa-skype {
  color: #00aff0;
}

#social-links .fa-skype:hover {
  color: #07bbff;
}

#social-links a:hover {
  text-decoration: none;
}

#contact {
  margin-top: 20px;
}

#contact .fa {
  margin-right: 8px;
  font-size: 18px;
}

#social-links .fa {
  margin: 10px 5px;
  font-size: 24px;
}

#content-area {
  background-color: white;
  padding-left: 250px;
}

#content-area a {
  color: #362010;
}

#content-area a:hover {
  color: #5d4739;
}

.content {
  padding: 80px 40px 0px 40px;
  text-align: justify;
  max-width: 900px;
  margin: auto;
}

.content p, .content li, .education-item-info, figcaption {
  font-family: 'Open Sans', sans-serif;
}

#content-area h2:after {
  content:' ';
  display:block;
  border: 1px solid #222831;
  box-shadow:inset 0 1px 1px #222831;
  -webkit-box-shadow:inset 0 1px 1px #222831;
  -moz-box-shadow:inset 0 1px 1px #222831;
}

.education-item {
  margin: 40px 0px;
}

.education-item-title .fa {
  margin-right: 10px;
}

.education-item-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: 16px;
  font-weight: bold;
}

.project-item {
  border-radius: 0.5rem;
  box-shadow: 2px 2px 12px -3px rgba(0,0,0,0.5);
  -webkit-box-shadow: 2px 2px 12px -3px rgba(0,0,0,0.5);
  -moz-box-shadow: 2px 2px 12px -3px rgba(0,0,0,0.5);
  margin: 20px 0px;
}

.project-info {
  padding: 0px 20px 10px 20px;
}

.project-info iframe {
  float: right;
  width: 400px;
  height: 225px;
}

.project-info-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.project-info-wrapper div {
  width: 50%;
  margin: 20px;
}

.project-title {
  font-size: 20px;
  font-weight: bold;
  background-color: #28303e;
  color: #e8e8e8;
  padding: 20px 0px 5px 20px;
  border-top-left-radius: inherit;
  border-top-right-radius: inherit;
}

#footer {
  background-color: #3f4855;
  padding-left: 250px;
  text-align: center;
  color: #e8e8e8;
}

#copyright {
  padding: 20px 0px;
}

.skills-item {
  padding-bottom: 10px;
}

.skills-item-content {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.skills-item-content .chart {
  width: 58%;
  height: auto;
}

#ai-skills .skills-info {
  width: 42%;
}

#gallery{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding-left: 250px;
}

#gallery figure {
  margin-bottom: 20px;
}

.landscape img {
  max-width: 650px;
  width: 100%;
  height: auto;
}

.portrait img {
  max-height: 450px;
  width: auto;
}

/* ----- Mobile menu ---- */

.menu-toggle, #mobile-home {
  display: none;
}

@media only screen and (max-width: 1160px) {

  .education-item-header, .skills-item-content, .project-info-wrapper {
    flex-direction: column;
    width: 100%;
  }

  .project-info-wrapper div {
    width: 100%;
    margin: 0;
  }

  #ai-skills .skills-info {
    width: 100%;
  }

  .skills-item-content .chart {
    width: 70%;
    height: auto;
  }

  .project-info iframe {
    float: none;
    display: block;
    margin: auto;
    max-width: 100%;
  }

}

@media only screen and (max-width: 850px) {

  html, body {
		width: 100vw;
	}

  #header {
    display: flex;
    flex-direction: column;
  }

  ul {
    padding-inline-start: 20px;
    text-align: left;
  }

  .content {
    padding: 80px 20px 0px 20px;
  }

  #social-links .fa {
    font-size: 28px;
  }

  #mobile-wrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
  }

  .top-menu {
    display: none;
  }

  .menu-toggle, #mobile-home {
		display: inline-block;
  	cursor: pointer;
    margin: 10px;
    padding: 10px;
	}

  #mobile-home a{
    font-size: 20px;
    color: white;
    text-decoration: none;
  }

  .bar1, .bar2, .bar3 {
    width: 35px;
    height: 5px;
    background-color: white;
    margin: 6px 0;
    transition: 0.4s;
  }

  .change .bar1 {
    -webkit-transform: rotate(-45deg) translate(-8px, 6px);
    transform: rotate(-45deg) translate(-8px, 6px);
  }

  .change .bar2 {
    opacity: 0;
  }

  .change .bar3 {
    -webkit-transform: rotate(45deg) translate(-9px, -8px);
    transform: rotate(45deg) translate(-9px, -8px);
  }

  /* ----- Pressed mobile menu-toggle ----- */

  .pressed {
    display: flex;
    flex-direction: column;
  }

  .pressed ul {
    list-style: none;
    margin: 0;
    padding-left: 0;
  }

  .pressed li, .pressed li a{
    margin: 5px 0px;
    padding: 5px 15px;
    font-size: 20px;
  }

  .expanded {
		max-height: 100vh;
		height: 400px !important;
		overflow-y: scroll !important;
	}

  .skills-item-content .chart {
    width: 90%;
    height: auto;
  }

  main {
    display: flex;
    flex-direction: column;
    padding-top: 0;
  }

  #sidebar-info {
    position: relative;
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 18px;
    padding-top: 0px;
  }

  #content-area, #gallery {
    padding-left: 0;
  }

  #footer {
    padding: 0px 20px;
  }

}

@media only screen and (min-width: 1800px) {
  #sidebar-info {
    width: 300px;
    padding-top: 100px;
  }

  #content-area, #footer, #gallery {
    padding-left: 300px;
  }

  .content {
    max-width: 1200px;
  }

  .skills-item-content .chart, #ai-skills .skills-info {
    width: 50%;
  }

}

